# pythonic-function-calling-data

./: .gitignore  README.md  openai_utils.py  pyproject.toml  run_id  run_s1.py  run_s1_openai.py  run_s2.py  run_s2_openai.py  run_s3.py  run_s3_openai.py  start.sh  start.txt  start_openai.sh  start_openai_multiturn.ps1  start_openai_multiturn.sh
.ipynb_checkpoints/: run_s1-checkpoint.py
example/: BFCL_v4_multi_turn_base.json
pipeline/: __init__.py
pipeline/034d71167bd74552977d0b21fb771fff/: scenarios.json
pipeline/data/: curriculum.csv
pipeline/data/087190226fd447b5b4595971dc8a8728/: functions.json
pipeline/data/087190226fd447b5b4595971dc8a8728/.ipynb_checkpoints/: multi_turn_queries-checkpoint.json  scenarios-checkpoint.json
pipeline/s1_scenario/: __init__.py  prompt.md  task.py
pipeline/s2_functions/: __init__.py  parser.py  prompt.md  task.py
pipeline/s3_queries/: __init__.py
pipeline/s3_queries/multiturn/: __init__.py  prompt.md  task.py
pipeline/s3_queries/parallel/: __init__.py  prompt.md  task.py
pipeline/s3_queries/simple/: __init__.py  prompt.md  task.py
pipeline/tools/: convert_to_multi_turn_eng.py  validate_multi_turn_eng.py
pythonic_function_calling_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
