[project]
name = "pythonic-function-calling-data"
version = "0.1.0"
description = "Repository for the Pythonic Function Calling data generation with Dria Network"
authors = [
  { name = "andthattoo" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dria>=0.0.111",
    "httpx==0.28.1",
  "openai>=1.44.0",
  "jsonschema>=4.23.0",
]
